tooling/nargo_cli/tests/snapshots/execution_failure/brillig_entry_points_shared_recursive/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: function `baz` cannot return without recursing
   ┌─ src/main.nr:15:4
   │
15 │ fn baz() {
   │    --- function cannot return without recursing
   │

error: Assertion failed: Stack too deep
   ┌─ src/main.nr:12:5
   │
12 │     f();
   │     ---
   │
   = Call stack:
            1: main
                at src/main.nr:2:5
     ┌─     2: baz
     │          at src/main.nr:18:9
     │      3: foo
     │          at src/main.nr:7:5
     │      4: bar
     │          at src/main.nr:12:5
     └─ (repeated 3413 times)

Failed assertion
