tooling/nargo_cli/tests/snapshots/execution_failure/brillig_entry_points_shared_recursive/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: function `baz` cannot return without recursing
   ┌─ src/main.nr:15:4
   │
15 │ fn baz() {
   │    --- function cannot return without recursing
   │

error: Comptime Stack Overflow
   ┌─ std/lib.nr:42:9
   │
42 │         print_unconstrained(true, input);
   │         -------------------------------- Exceeded the recursion limit
   │
   = Call stack:
          1: ?
                at src/main.nr:1:4
          2: main
                at src/main.nr:2:5
     ┌─   3: baz
     │          at src/main.nr:18:9
     │    4: foo
     │          at src/main.nr:7:5
     │    5: bar
     │          at src/main.nr:12:5
     └─ (repeated 32 times)
         99: baz
                at src/main.nr:18:9
        100: foo
                at src/main.nr:6:5

Error interpreting main function
